--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "v-click-outside": "^1.0.4",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.11",
     "vue-router": "^3.0.1",
