--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "style-loader": "^0.21.0",
     "v-click-outside": "^1.0.4",
     "vue": "^2.5.16",
+    "vue-js-modal": "^1.3.15",
     "vue-loader": "^15.0.11",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
