--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-loader": "^15.0.11",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
