--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "u-select": "0.0.12",
     "v-click-outside": "^1.0.4",
     "vue": "^2.5.16",
     "vue-js-modal": "^1.3.15",
@@ -34,6 +35,7 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
+    "vuex-i18n": "^1.10.5",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
