--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "^2.5.16",
     "vue-js-modal": "^1.3.15",
     "vue-loader": "^15.0.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
