--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "vue-meta": "^1.5.5"
   }
 }
